fix: Code Editor scrollbar glitch

--- a/frappe/public/scss/common/controls.scss
+++ b/frappe/public/scss/common/controls.scss
@@ -172,10 +172,6 @@ select.form-control {
 		background-color: var(--dark-border-color);
 	}
 	.ace_scrollbar {
-		z-index: 3;
-	}
-
-	.ace_scrollbar {
 		z-index: 4;
 	}
 }
